--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-color-pallete-api",
+  "name": "image-color-palette-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
