package.json fix

--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
-    "axios": "^1.3.5",
-    "clipboardy": "^3.0.0",
-    "get-pixels": "^3.3.3",
+    "@nestjs/platform-express": "^9.4.0",
     "jimp": "^0.22.7",
-    "node-fetch": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.32.0"
